--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "color": "^3.1.0",
     "moment": "^2.22.2",
     "react": "16.4.1",
     "react-native": "0.56.0",
