1.增加jpush依赖，配置iOS部分

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -108,6 +108,11 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        manifestPlaceholders = [
+                JPUSH_APPKEY: "b96d00786c574c55b521ae55",
+                APP_CHANNEL : "default"
+        ]
+
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
@@ -142,6 +147,9 @@ android {
 }
 
 dependencies {
+    compile project(':jpush-react-native')
+    implementation project(':jcore-react-native')
+    implementation project(':jpush-react-native')
     compile project(':react-native-charts-wrapper')
     compile project(':react-native-vector-icons')
     compile fileTree(dir: "libs", include: ["*.jar"])
