--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "base-64": "^0.1.0",
     "color": "^3.1.0",
+    "jcore-react-native": "^1.3.0",
+    "jpush-react-native": "^2.4.0",
     "moment": "^2.22.2",
     "react": "16.4.1",
     "react-native": "0.56.0",
