1.增加找回密码功能

--- a/ios/bitFeature/Info.plist
+++ b/ios/bitFeature/Info.plist
@@ -45,7 +45,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string></string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Zocial.ttf</string>
@@ -62,6 +62,13 @@
 		<string>Feather.ttf</string>
 		<string>EvilIcons.ttf</string>
 		<string>Entypo.ttf</string>
+	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>external-accessory</string>
+		<string>fetch</string>
+		<string>newsstand-content</string>
+		<string>remote-notification</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
